--- a/svg-gallery/src/pages/InspirationUploadPage/style.scss
+++ b/svg-gallery/src/pages/InspirationUploadPage/style.scss
@@ -38,3 +38,9 @@
   line-height: 30px;
   text-transform: capitalize;
 }
+
+.cancel-btn:hover{
+  background-color: rgba(17, 41, 54, 0.04);
+
+  ;
+}
