--- a/svg-gallery/src/components/ProfilePage/personal-setting.scss
+++ b/svg-gallery/src/components/ProfilePage/personal-setting.scss
@@ -42,7 +42,7 @@
     }
     .avatarContainer {
         img {
-        width: 90x;
+        width: 90px;
         height: 90px;
         border-radius: 50%;
         @include xs{
