--- a/svg-gallery/src/pages/NotificationPage/style.scss
+++ b/svg-gallery/src/pages/NotificationPage/style.scss
@@ -124,8 +124,8 @@
                 width: 80px;
 
                 img {
-                    width: 100%;
-                    height: 60px;
+                    width: 81px;
+                    height: 70px;
                     border-radius: 1.987px;
                 }
             }
